# ForgeFinance

./: .gitconfig-temp  .gitignore  CLAUDE.md  FUTURE-CADDY-HTTPS.md  README.md  backup.sh  deploy.sh  docker-compose.yml  start.bat
.claude/: settings.local.json
.claude/skills/verify/: SKILL.md
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  alembic.ini  app.db.old  desktop.py  pyproject.toml  start.bat  start.sh  validate_models.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_legacy_columns_and_data.py  0003_integrity_and_multiuser.py  0004_budget_is_demo.py  0005_subscription_rules.py  0006_subscription_rule_links.py  0007_subscription_rule_cadence.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: account_types.py  accounts.py  auth.py  balances.py  budgets.py  categories.py  demo.py  export.py  imports.py  institutions.py  reports.py  subscriptions.py  transactions.py
backend/app/core/: config.py  paths.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  account.py  account_type.py  balance.py  budget.py  budget_visibility.py  category.py  enums.py  subscription_rule.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  account_type.py  budget_visibility.py  imports.py  institution.py  reports.py  subscriptions.py  transaction.py
backend/app/services/: balances.py  csv_import.py  reporting.py  subscriptions.py
backend/tests/: conftest.py  test_balances.py  test_csv_import.py  test_reporting.py  test_subscriptions.py
frontend/: .env.template  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
installer/: build.ps1  forge-finance.spec  setup.iss
(+25 files in other folders)
